--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,18 @@ body {
     margin: 0 auto;
 }
 
-header .btn-contato button, .hero-site button{
+header .btn-contato button, .hero-site button, .hoteis button {
     font-size: 18px;
     background-color: transparent;
     border: 1px solid #fff;
     color: #fff;
     cursor: pointer;
     transition: .5s;
+}
+
+header .btn-contato button:hover, .hero-site button:hover, .hoteis button:hover {
+    background-color: #fff;
+    color: #000;
 }
 
 /* ESTILO DO HEADER */
@@ -68,11 +73,6 @@ header .menu-desktop nav ul li a:hover {
 header .btn-contato button{
     width: 140px;
     height: 50px;
-}
-
-header .btn-contato button:hover, .hero-site button:hover {
-    background-color: #fff;
-    color: #000;
 }
 
 /* ESTILO DO HERO */
@@ -202,4 +202,59 @@ section.contato {
 
 .contato .icons-contato button:hover i, .contato .icons-contato button:hover p {
     color: #fff;
+}
+
+/* ESTILO HOTEIS */
+section.hoteis {
+    height: 600px;
+    background-image: url(../images/hotel-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: relative;
+    color: #fff;
+    text-align: center;
+}
+
+.hoteis > .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #000000d5;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.hoteis > .interface {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    z-index: 2;
+    position: relative;
+}
+
+.hoteis h3 {
+    font-size: 3em;
+    line-height: 50px;
+    font-weight: 200;
+}
+
+.hoteis h3 span {
+    display: block;
+    font-weight: 600;
+}
+
+.hoteis  p {
+    margin: 20px 0;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.hoteis button {
+    width: 220px;
+    height: 60px;
 }
