--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    transition: .5s;
+    z-index: 9;
 }
 
 header .interface {
@@ -45,9 +47,44 @@ header .interface {
     align-items: center;
 }
 
-header .logo img{
+header .logo img {
     max-width: 40px;
 }
+
+/* ESTILO MENU DINAMICO */
+header .logo img.logo-p {
+    display: none;
+}
+
+header.rolar {
+    background-color: #fff;
+    padding: 20px 0;
+    box-shadow: 0 0 8px #00000063;
+}
+
+header.rolar .menu-desktop nav ul li a {
+    color: #000;
+}
+
+header.rolar .btn-contato button {
+    border: 1px solid #000;
+    color: #000;
+}
+
+header.rolar .btn-contato button:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+header.rolar .logo .logo-b {
+    display: none;
+}
+
+header.rolar .logo .logo-p {
+    display: block;
+}
+
+/* -------------------- */
 
 header .menu-desktop nav ul{
     list-style-type: none;
@@ -257,4 +294,105 @@ section.hoteis {
 .hoteis button {
     width: 220px;
     height: 60px;
+}
+
+/* ESTILO DE COMO FUNCIONA */
+section.como-funciona {
+    padding: 80px 0;
+}
+
+.txt-funciona, .instrucoes {
+    display: inline-block;
+    width: 50%;
+    margin-right: -4px;
+    vertical-align: top;
+}
+
+.como-funciona .txt-funciona {
+    position: sticky;
+    top: 50%;
+    padding-bottom: 35px;
+}
+
+.como-funciona .txt-funciona h3 {
+    font-size: 4em;
+    line-height: 60px;
+    font-weight: 300;
+}
+
+.como-funciona .txt-funciona h3 span {
+    display: block;
+    font-weight: 700;
+    
+}
+
+.instrucoes .instru-box {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+    border: 2px solid #000;
+    padding: 20px;
+}
+
+.instrucoes .instru-box img{
+    max-width: 100px;
+}
+
+.instrucoes .instru-box h4 {
+    font-size: 1.5em;
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+
+.instrucoes .instru-box h4 span {
+    font-weight: 300;
+}
+
+.instrucoes .instru-box p {
+    line-height: 20px;
+}
+
+/* ESTILO RODAPE */
+footer {
+    background-color: #000;
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+footer .top-footer button {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+    margin: 0 10px;
+    transition: .5s;
+}
+
+footer .top-footer button:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+footer .middle-footer {
+    margin: 20px 0;
+}
+
+footer .middle-footer a {
+    color: #fff;
+    margin: 0 15px;
+}
+
+footer .botton-footer {
+    border-top: 2px solid #fff;
+}
+
+footer .botton-footer p{
+    color: #fff;
+    margin-top: 10px;
 }
